--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
