--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
@@ -15,6 +16,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.8.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
